--- a/frontend/app/src/component/Card/Card.css
+++ b/frontend/app/src/component/Card/Card.css
@@ -1,18 +1,6 @@
 .card-control {
     margin: 0.5rem 0;
+    padding: 5px;
+    display:inline-block;
   }
   
-  .card-control label {
-    font-weight: bold;
-    display: block;
-    margin-bottom: 0.5rem;
-  }
-  
-  .card-control input {
-    display: block;
-    width: 100%;
-    border: 1px solid #ccc;
-    font: inherit;
-    line-height: 1.5rem;
-    padding: 0 0.25rem;
-  }
